# type

./: LICENSE  meson.build
data/: com.github.ryanafrish7.type.appdata.xml  com.github.ryanafrish7.type.desktop  meson.build
data/layouts/: qwerty_us.json
data/ui/: custom.css
src/: Application.vala  MainWindow.vala  config.vala.in  meson.build
src/core/: KeyboardLayout.vala  Lesson.vala  Orchestrator.vala
src/layouts/: HomeLayout.vala
src/widgets/: KeyWidget.vala  KeyboardWidget.vala  TextWidget.vala
